# ot-harjoitustyo

./: README.md  pyproject.toml
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: laajempi_sekvenssikaavio.md  monopoli_luokkakaavio.md  sekvenssikaavio.md
